# bazel-example

./: .bazelproject  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
deployments/docker-compose/: docker-compose.yml
deployments/k8s/base/: gateway.yaml  postgres.yaml  user-service.yaml
docs/api/: gateway-api.md
docs/development/: getting-started.md
libs/: BUILD.bazel
libs/common/: BUILD.bazel
libs/common/go/: BUILD.bazel
libs/common/java/: BUILD.bazel
libs/database/: BUILD.bazel
libs/messaging/: BUILD.bazel
libs/monitoring/: BUILD.bazel
proto/: BUILD.bazel
proto/common/: BUILD.bazel  errors.proto
proto/gateway/: BUILD.bazel  gateway.proto  gateway_service.proto
proto/internal/: BUILD.bazel  events.proto  health.proto  metrics.proto
proto/notification/: BUILD.bazel  notification.proto  notification_service.proto
proto/order/: BUILD.bazel  order.proto  order_service.proto
proto/user/: BUILD.bazel  user.proto  user_service.proto
proto/user/testdata/: BUILD.bazel  account_management.proto  billing_system.proto  conference_system.proto  construction.proto  cryptocurrency.proto  dating_platform.proto  delivery_tracking.proto  drone_services.proto  education_system.proto  energy_management.proto  event_management.proto  financial_services.proto  fitness_equipment.proto  fitness_tracking.proto  food_delivery.proto  gaming_platform.proto  healthcare_system.proto  hotel_management.proto  insurance.proto  inventory_management.proto  job_portal.proto  legal_services.proto  library_system.proto  logistics_transport.proto  marketplace.proto  messaging_platform.proto  music_streaming.proto  news_aggregator.proto  parking_system.proto  pet_care.proto  photo_sharing.proto  real_estate.proto  recipe_platform.proto  retail_pos.proto  smart_home.proto  social_media.proto  space_exploration.proto  streaming_media.proto  subscription_box.proto  (+8 more)
proto/worker/: BUILD.bazel  worker.proto  worker_service.proto
services/: BUILD.bazel
services/gateway/: BUILD.bazel  main.go  main_test.go
services/gateway/config/: config.yaml
services/gateway/internal/client/: order_client.go  user_client.go
services/gateway/internal/config/: config.go
services/notification/: BUILD.bazel  main.go
services/notification/grpc/: BUILD.bazel  notification.go
services/notification/internal/grpc/: BUILD.bazel  notification.go
services/order/: BUILD.bazel
services/order/src/main/java/com/example/order/: OrderApplication.java
services/order/src/main/java/com/example/order/entity/: OrderEntity.java  OrderItemEntity.java
services/order/src/main/java/com/example/order/grpc/: OrderGrpcService.java
services/order/src/main/java/com/example/order/repository/: OrderRepository.java
services/order/src/main/java/com/example/order/service/: OrderService.java
services/user/: BUILD.bazel
services/user/src/main/java/com/example/user/: UserApp.java  UserApplication.java
services/user/src/main/java/com/example/user/controller/: UserController.java
services/user/src/main/java/com/example/user/converter/: UserConverter.java
services/user/src/main/java/com/example/user/entity/: User.java  UserEntity.java
services/user/src/main/java/com/example/user/grpc/: UserGrpcService.java
services/user/src/main/java/com/example/user/repository/: UserRepository.java
services/user/src/main/java/com/example/user/service/: UserService.java
services/user/src/main/resources/: application.yaml
services/user/src/test/java/com/example/user/: UserAppIT.java
tools/: BUILD.bazel
tools/docker/: BUILD.bazel  go.Dockerfile  java.Dockerfile
tools/scripts/: build.sh  test.sh
