load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "gateway_proto",
    srcs = ["gateway.proto"],
    deps = ["//proto/common:types_proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "gateway_go_proto",
    importpath = "github.com/example/bazel-example/proto/gateway",
    proto = ":gateway_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "gateway_service_proto",
    srcs = ["gateway_service.proto"],
    deps = [
        ":gateway_proto",
        "//proto/common:errors_proto",
        "//proto/user:user_service_proto",
        "//proto/order:order_service_proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "gateway_service_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/example/bazel-example/proto/gateway",
    proto = ":gateway_service_proto",
    visibility = ["//visibility:public"],
)
