load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "events_proto",
    srcs = ["events.proto"],
    deps = [
        "//proto/common:types_proto",
        "//proto/user:user_proto",
        "//proto/order:order_proto",
    ],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "events_java_proto",
    deps = [":events_proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "events_go_proto",
    importpath = "github.com/example/bazel-example/proto/internal",
    proto = ":events_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "metrics_proto",
    srcs = ["metrics.proto"],
    deps = ["//proto/common:types_proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "metrics_java_proto",
    deps = [":metrics_proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "metrics_go_proto",
    importpath = "github.com/example/bazel-example/proto/internal",
    proto = ":metrics_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "health_proto",
    srcs = ["health.proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "health_java_proto",
    deps = [":health_proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "health_go_proto",
    importpath = "github.com/example/bazel-example/proto/internal",
    proto = ":health_proto",
    visibility = ["//visibility:public"],
)
