load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto_grpc_java//:defs.bzl", "java_grpc_library")
load("@rules_proto_grpc_go//:defs.bzl", "go_grpc_library")

proto_library(
    name = "proto",
    srcs = glob(["**/*.proto"]),
    strip_import_prefix = "/proto",
    deps = ["//proto/common:proto"],
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "proto_java",
    deps = [":proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "proto_go",
    protos = [":proto"],
    deps = ["//proto/common:proto_go"],
    importpath = "github.com/example/bazel-example/proto/user",
    visibility = ["//visibility:public"],
)

java_grpc_library(
    name = "grpc_java",
    protos = [":proto"],
    deps = ["//proto/common:proto_java"],
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "grpc_go",
    protos = [":proto"],
    deps = ["//proto/common:proto_go"],
    importpath = "github.com/example/bazel-example/proto/notification",
    visibility = ["//visibility:public"],
)
