load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "worker_proto",
    srcs = ["worker.proto"],
    deps = ["//proto/common:types_proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "worker_go_proto",
    importpath = "github.com/example/bazel-example/proto/worker",
    proto = ":worker_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "worker_service_proto",
    srcs = ["worker_service.proto"],
    deps = [
        ":worker_proto",
        "//proto/common:errors_proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "worker_service_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/example/bazel-example/proto/worker",
    proto = ":worker_service_proto",
    visibility = ["//visibility:public"],
)
