load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "gateway_lib",
    srcs = glob(["internal/**/*.go"]),
    importpath = "github.com/example/bazel-example/services/gateway",
    deps = [
        "//proto/common:types_go_proto",
        "//proto/common:errors_go_proto",
    ],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "gateway",
    srcs = ["main.go"],
    deps = [":gateway_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "gateway_test",
    srcs = glob(["**/*_test.go"]),
    deps = [":gateway_lib"],
)
