load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "app",
    srcs = ["main.go"],
    deps = [
        "//services/notification/grpc:lib",
        "//proto/notification:grpc_go",
        "@org_golang_google_grpc//:go_default_library",
    ],
    visibility = ["//visibility:private"],
)
