load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

java_library(
    name = "order_service_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//proto/order:order_java_proto",
        "//proto/order:order_service_java_proto",
        "//proto/user:user_java_proto",
        "//proto/common:types_java_proto",
        "//proto/common:errors_java_proto",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_boot_spring_boot_starter_data_jpa",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
    ],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "order_service",
    main_class = "com.example.order.OrderApplication",
    runtime_deps = [":order_service_lib"],
    visibility = ["//visibility:public"],
)

java_test(
    name = "order_service_test",
    srcs = glob(["src/test/java/**/*.java"]),
    test_class = "com.example.order.OrderServiceTest",
    deps = [
        ":order_service_lib",
        "@maven//:org_springframework_boot_spring_boot_starter_test",
        "@maven//:junit_junit",
    ],
)
