load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_plugin")
load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")

java_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    # Must be workspace-root relative. Make resources land at classpath root.
    resource_strip_prefix = "services/user/src/main/resources",
    plugins = ["//:lombok_ap", "//:mapstruct_ap", "//:mapstruct_spi_protobuf_ap"],
    deps = [
        "//proto/user:grpc_java",

        "@maven//:org_springframework_boot_spring_boot_starter",
        "@maven//:io_github_danielliu1123_grpc_boot_starter",

        "//:lombok_lib",
        "//:mapstruct_lib",
    ],
    visibility = ["//visibility:private"],
)

java_binary(
    name = "main",
    main_class = "com.example.user.UserApp",
    runtime_deps = [
        ":lib",
    ],
    visibility = ["//visibility:private"],
)

java_test_suite(
    name = "test",
    srcs = glob(["src/test/java/**/*.java"]),
    runner = "junit5",
    test_suffixes = ["Test.java", "Tests.java", "IT.java"],
    deps = [
        ":lib",

        "@maven//:org_springframework_boot_spring_boot_starter_test",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    visibility = ["//visibility:private"],
)
