load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "common_java",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//proto/common:types_java_proto",
        "//proto/common:errors_java_proto",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
    ],
    visibility = ["//visibility:public"],
)
